fixing horizontal scroll pop up container

--- a/styles.css
+++ b/styles.css
@@ -581,7 +581,7 @@ display: none; /* initial state is hidden */
   border-color: rgb(173, 173, 173);
 }
 
-
+/* Popup styling for desktop screens */
 .popup {
   position: fixed;
   top: 0;
@@ -593,20 +593,20 @@ display: none; /* initial state is hidden */
   display: none; /* Hide the popup by default */
 }
 
-
 .popup-content {
   position: absolute;
   top: 50%; /* Position the content in the middle of the screen */
   left: 50%;
   transform: translate(-50%, -50%); /* Move the content up and left by 50% of its own size */
   padding: 24px; /* 24px padding for the content */
-  width: calc(100% - 24px); /* Take up 100% of the screen width minus 112px for the background */
+  width: calc(100% - 112px); /* Take up 100% of the screen width minus 112px for the background */
   height: calc(100% - 112px); /* Take up 100% of the screen height minus 112px for the background */
   max-width: 600px; /* Limit the maximum width of the content */
   max-height: 800px; /* Limit the maximum height of the content */
   background-color: #fefefe; /* White background color */
   border: 2px solid rgb(182, 215, 197); /* Green border */
   border-radius: 20px; /* Rounded corners */
+  overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 /* Popup styling for smaller devices */
